<resources>
    <string name="app_name">MessengerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Vlad Ganisevskiy</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_email">example@mail.ru</string>
    <string name="settings_label_email">Нажмите, чтобы изменить email</string>
    <string name="settings_default_login">vladGanisevskiy</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">bio</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="create_group">Создать группу</string>
    <string name="example_mail_ru">example@mail.ru</string>
    <string name="password">Пароль</string>
    <string name="login_btn">Войти</string>
    <string name="create_account_btn">Создать аккаунт</string>
    <string name="sign_in">Войти</string>
    <string name="create_new_account">Создать новый аккаунт</string>
    <string name="username">Username</string>
    <string name="cancel">Отмена</string>

    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников</item>
    </plurals>
</resources>