<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.RegisterActivity">

    <TextView
        android:id="@+id/auth_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/auth_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_mail_ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_text_view"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/auth_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_input_email"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_input_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_btn"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_account_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>